WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304390
WebAVSampleBufferListenerClient : com.apple.WebCore: WTF::ThreadSafeWeakPtrControlBlock::strongRef const
https://bugs.webkit.org/show_bug.cgi?id=304390
Summary
WebAVSampleBufferListenerClient : com.apple.WebCore: WTF::ThreadSafeWeakPtrC...
Jean-Yves Avenard [:jya]
Reported
2025-12-18 00:33:41 PST
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x12b2fa66c WTFCrash 1 com.apple.JavaScriptCore 0x12b2fa6cc WTFCrashWithSecurityImplication 2 com.apple.WebCore 0x30004540c WTF::ThreadSafeWeakPtrControlBlock::strongRef() const 3 com.apple.WebCore 0x30346cfac WTF::ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<WebCore::VideoMediaSampleRenderer, (WTF::DestructionThread)1>::ref() const 4 com.apple.WebCore 0x30346cf4c WebCore::VideoMediaSampleRenderer::ref() const 5 com.apple.WebCore 0x3088e4234 WTF::DefaultRefDerefTraits<WebCore::WebAVSampleBufferListenerClient>::refIfNotNull(WebCore::WebAVSampleBufferListenerClient*) 6 com.apple.WebCore 0x3088e41f0 WTF::RefPtr<WebCore::WebAVSampleBufferListenerClient, WTF::RawPtrTraits<WebCore::WebAVSampleBufferListenerClient>, WTF::DefaultRefDerefTraits<WebCore::WebAVSampleBufferListenerClient>>::RefPtr(WebCore::WebAVSampleBufferListenerClient*) 7 com.apple.WebCore 0x3088e40a0 WTF::RefPtr<WebCore::WebAVSampleBufferListenerClient, WTF::RawPtrTraits<WebCore::WebAVSampleBufferListenerClient>, WTF::DefaultRefDerefTraits<WebCore::WebAVSampleBufferListenerClient>>::RefPtr(WebCore::WebAVSampleBufferListenerClient*) 8 com.apple.WebCore 0x3088e63c4 -[WebAVSampleBufferListenerPrivate layerReadyForDisplayChanged:]::$_6::operator()() const 9 com.apple.WebCore 0x3088e6274 WTF::Detail::CallableWrapper<-[WebAVSampleBufferListenerPrivate layerReadyForDisplayChanged:]::$_6, void>::call() 10 com.apple.JavaScriptCore 0x12b3301ac WTF::Function<void ()>::operator()() const 11 com.apple.JavaScriptCore 0x12b406ee0 WTF::RunLoop::performWork() 12 com.apple.JavaScriptCore 0x12b40e9d0 WTF::RunLoop::performWork(void*)
rdar://166770286
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2025-12-18 00:38:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55614
EWS
Comment 2
2025-12-19 01:58:15 PST
Committed
304736@main
(da9dd8740721): <
https://commits.webkit.org/304736@main
> Reviewed commits have been landed. Closing PR #55614 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug